# PathoActivationAtlas

./: .gitignore  README.md  annotate.py  conda_env.yml  create.py  pyproject.toml  view.py
_annotator/: GridCellWidget.py  GridWidget.py  MainWindow.py  ThumbnailWidget.py  misc.py
_annotator/_resources/: MainWindow.ui
_creator/: actgrid.py  atlas.py  captum_fragments.py  class_vis.py  custom_lpips.py  datasets.py  metrics.py  models.py  objective_funcs.py  optimizers.py  record.py  thumbnails.py  transformations.py  utils.py
_viewer/: CodeViewer.py  Data.py  DataActgrid.py  DataAtlas.py  DataClassVis.py  GridLayerCellWidget.py  GridLayerWidget.py  GridWidget.py  MainWindow.py  ThumbnailWidget.py  misc.py
_viewer/_resources/: MainWindow.ui  Ui_MainWindow.py
config/: NCT-CRC-HE-100K.csv  uni_nct.yaml
modeling/: README.md  pyproject.toml  train.py
modeling/splits-nct/: split_config.json  test_split.csv
modeling/splits-nct/fold_0/: train.csv  val.csv
modeling/splits-nct/fold_1/: train.csv  val.csv
modeling/splits-nct/fold_2/: train.csv  val.csv
modeling/splits-nct/fold_3/: train.csv  val.csv
modeling/splits-nct/fold_4/: train.csv  val.csv
