[project]
name = "atlas-pipeline-modeling"
version = "0.1.0"
description = "Atlas pipeline modeling"
requires-python = ">=3.12,<3.13"

dependencies = [
  # PyTorch
  "torch==2.5.1",
  "torchvision==0.20.1",
  "torchaudio==2.5.1",

  # HF / training
  "transformers==4.46.2",
  "accelerate==1.1.1",
  "peft==0.13.2",
  "timm==1.0.11",
  "open-clip-torch==2.29.0",

  # Vision
  "kornia==0.4.1",
  "lpips==0.1.4",
  "opencv-python==4.10.0.84",
  "pillow==11.0.0",

  # Data / science
  "numpy==2.0.2",
  "pandas==2.2.3",
  "scipy==1.14.1",
  "scikit-learn==1.5.2",
  "umap-learn==0.5.7",
  "numba==0.60.0",

  # Utilities / text
  "tqdm==4.67.0",
  "pyyaml==6.0.2",
  "regex==2024.11.6",
  "ftfy==6.3.1",
  "natsort==8.4.0",

  # Plotting
  "matplotlib==3.9.2",

  # Project-specific libs
  "dreamsim==0.2.1",
  "torch-lucent==0.1.8",
]

[dependency-groups]
dev = [
  "pytest==8.3.3",
  "pytest-mock==3.14.0",
  "coverage==7.6.6",
  "coveralls==4.0.1",
  "ipython==8.29.0",
]

# --- uv: configure PyTorch CUDA index (Linux only) ---

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]